--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,24 @@
-# Configurações do Banco de Dados PostgreSQL
+# ==============================
+# 🌐 CONFIGURAÇÕES DO BANCO
+# ==============================
+
+# 🔥 Para ambiente Render (produção)
+DATABASE_URL=postgresql://bib_oku_db_user:L5kbYmpDdUmW94kxdQCASodWNeWeMf0U@dpg-d48qv51r0fns73878ed0-a/bib_oku_db
+
+# 💻 Para ambiente local (usado só se DATABASE_URL não existir)
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=Bib_Oku_DB
 DB_PASSWORD=Vilonga
 DB_PORT=5432
 
-# Configurações do JWT
+# ==============================
+# 🔑 CONFIGURAÇÕES DE AUTENTICAÇÃO
+# ==============================
 JWT_SECRET=okukulanaua_secret_key_2025
 
-# Configurações do Servidor
+# ==============================
+# ⚙️ CONFIGURAÇÕES DO SERVIDOR
+# ==============================
 PORT=3000
-NODE_ENV=development 
+NODE_ENV=production
